bk_ida/gccida/g1/bss_section
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/bss_section/src/varasm.c:945:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 != in_bss ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/bss_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/bss_section/src/varasm.c:948:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_bss; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/bss_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/bss_section/src/obj/varasm.o] Error 1
